<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F7CC3E">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="#111"
        android:textSize="30dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"
        android:textColor="#111"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textViewUserName"
        app:layout_constraintBottom_toBottomOf="@id/textViewUserName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/enter_your_email"/>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName"
        app:layout_constraintEnd_toEndOf="@id/textViewUserName"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#111"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textViewPassword"
        app:layout_constraintBottom_toBottomOf="@id/textViewPassword"
        app:layout_constraintStart_toStartOf="@id/editTextUserName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/enter_your_password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPassword"
        android:background="#111"
        android:textColor="#fff"
        android:textSize="20dp"
        android:text="@string/login" />
</androidx.constraintlayout.widget.ConstraintLayout>
